# mdptetris

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  configure.ac~  experiments.py  simulation.py  simulations_ce.py  simulations_ce_sl.py
data/: Makefile.am  Makefile.in
doc/: Doxyfile  api.doc  index.doc  new_algo.doc
doc/html/: annotated.html  api_8doc.html  board_8c.html  board_8h.html  brick__masks_8c.html  brick__masks_8h.html  classes.html  cmaes_8c.html  cmaes_8h.html  cmaes__interface_8h.html  cmaes__main_8c.html  common__parameters_8c.html  common__parameters_8h.html  contraction__factor_8c.html  cross__entropy_8c.html  cross__entropy__noise_8c.html  cross__entropy__noise_8h.html  cross__entropy__parameters_8c.html  cross__entropy__parameters_8h.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  (+197 more)
include/: board.h  cross_entropy_noise.h  cross_entropy_parameters.h  estimate_duration.h  feature_functions.h  feature_policy.h  file_tools.h  game.h  graphics.h  lambda_policy_iteration_parameters.h  last_move_info.h  lspi_parameters.h  macros.h  piece.h  play_games.h  random.h  rlc_parameters.h  strategy.h  strategy_fixed_weights.h  strategy_random.h  strategy_uct.h  strategy_value_iteration.h  types.h  uct.h
lspi_python/: example.py  exp.py  lspi.py  lspi_x.py  mdp.py  mountain_car.py  navigation.py
rlc2008agent/: Makefile  Makefile.am  Makefile.in  run.bash
rlc2008agent/src/: TetrisAgent.py
rlcompetition/: TetrisAgent.py
src/: Makefile.am  Makefile.am~  Makefile.in  Makefile.in~  board.c  cmaes_main.c  common_parameters.c  contraction_factor.c  cross_entropy.c  cross_entropy_noise.c  cross_entropy_parameters.c  estimate_duration.c  estimate_duration_main.c  feature_functions.c  feature_policy.c  file_tools.c  game.c  games_statistics.c  graphics.c  hashtable_test.c  incmaes.par  lambda_policy_iteration.c  lambda_policy_iteration_parameters.c  last_move_info.c  lspi.c  lspi_parameters.c  play_games.c  random.c  rlc.c  rlc_parameters.c  strategy.c  strategy_fixed_weights.c  strategy_random.c  strategy_value_iteration.c  test_bits.c  tetris.c  uct.c  value_iteration.c  view_game.c
(+617 files in other folders)
