# data files needed by the executables
piecesdir = $(datadir)/mdptetris
pieces_DATA = \
	$(top_srcdir)/data/pieces4.dat \
	$(top_srcdir)/data/pieces3.dat \
	$(top_srcdir)/data/pieces_melax.dat

featuresdir = $(datadir)/mdptetris/features
features_DATA = \
	$(top_srcdir)/data/features/dellacherie_initial.dat \
	$(top_srcdir)/data/features/dellacherie_ourwellsums.dat \
	$(top_srcdir)/data/features/bertsekas_initial.dat \
	$(top_srcdir)/data/features/ce_bertsekas.dat \
	$(top_srcdir)/data/features/ce_dellacherie.dat \
	$(top_srcdir)/data/features/ce_bertsekas_dellacherie.dat \
	$(top_srcdir)/data/features/ce_bdu.dat \
	$(top_srcdir)/data/features/ce_du.dat \
	$(top_srcdir)/data/features/record_bdu.dat \
	$(top_srcdir)/data/features/record_du.dat \
	$(top_srcdir)/data/features/value_estimator_bertsekas.dat \
	$(top_srcdir)/data/features/lagoudakis_initial.dat \
	$(top_srcdir)/data/features/lagoudakis_final.dat

EXTRA_DIST = \
	$(top_srcdir)/data/pieces4.dat					\
	$(top_srcdir)/data/pieces3.dat					\
	$(top_srcdir)/data/pieces_melax.dat				\
	$(top_srcdir)/data/features/dellacherie_initial.dat		\
	$(top_srcdir)/data/features/dellacherie_ourwellsums.dat		\
	$(top_srcdir)/data/features/bertsekas_initial.dat		\
	$(top_srcdir)/data/features/ce_bertsekas.dat			\
	$(top_srcdir)/data/features/ce_dellacherie.dat			\
	$(top_srcdir)/data/features/ce_bertsekas_dellacherie.dat	\
	$(top_srcdir)/data/features/ce_bdu.dat				\
	$(top_srcdir)/data/features/ce_du.dat				\
	$(top_srcdir)/data/features/record_bdu.dat			\
	$(top_srcdir)/data/features/record_du.dat			\
	$(top_srcdir)/data/features/value_estimator_bertsekas.dat       \
	$(top_srcdir)/data/features/lagoudakis_initial.dat \
	$(top_srcdir)/data/features/lagoudakis_final.dat

