rlcdir = $(datadir)/mdptetris/rlc2008agent

rlc_DATA = \
	$(top_srcdir)/rlc2008agent/src/TetrisAgent.py 
#	$(top_srcdir)/rlc2008agent/src/AgentLoader.py \
	$(top_srcdir)/rlc2008agent/run.bash \
	$(top_srcdir)/rlc2008agent/pieces4.dat

# additional files to provide in a tarball release
EXTRA_DIST = \
	$(top_srcdir)/rlc2008agent/src/TetrisAgent.py 
#	$(top_srcdir)/rlc2008agent/src/AgentLoader.py \
	$(top_srcdir)/rlc2008agent/run.bash \
	$(top_srcdir)/rlc2008agent/pieces4.dat
